feat: add events service
