# dobriy-api-service/gen/openapi.json
@@ -8,10 +8,10 @@
     "url" : "http://localhost:10010/api/v1"
   } ],
   "paths" : {
-    "/map" : {
+    "/events" : {
       "get" : {
         "description" : "Returns list of musical city musicevents",
-        "operationId" : "map",
+        "operationId" : "events",
         "parameters" : [ {
           "name" : "date",
           "in" : "query",
@@ -26,7 +26,7 @@
             "content" : {
               "application/json" : {
                 "schema" : {
-                  "$ref" : "#/components/schemas/MapResponse"
+                  "$ref" : "#/components/schemas/EventsResponse"
                 }
               }
             }
@@ -43,7 +43,7 @@
           }
         }
       },
-      "x-swagger-router-controller" : "map-controller"
+      "x-swagger-router-controller" : "events-controller"
     },
     "/swagger" : {
       "x-swagger-pipe" : "swagger_raw"
@@ -51,29 +51,29 @@
   },
   "components" : {
     "schemas" : {
-      "MapResponse" : {
+      "EventsResponse" : {
         "type" : "array",
         "items" : {
-          "$ref" : "#/components/schemas/Map"
+          "$ref" : "#/components/schemas/Event"
         }
       },
-      "Map" : {
+      "Event" : {
         "required" : [ "date" ],
         "type" : "object",
         "properties" : {
           "name" : {
             "type" : "string"
           },
-          "title" : {
+          "street" : {
             "type" : "string"
           },
           "price" : {
             "type" : "string"
           },
-          "sits" : {
+          "date" : {
             "type" : "string"
           },
-          "date" : {
+          "imageId" : {
             "type" : "string"
           }
         }
